tests/solidity-semantic-tests/out/errors/named_parameters_shadowing_types/C.clear.teal
#pragma version 12
#pragma typetrack false

// /home/argi/AlgorandFoundation/polymarket-experiment/puya-sol/tests/solidity-semantic-tests/tests/errors/named_parameters_shadowing_types.sol.C.clear_state_program() -> uint64:
main:
    pushint 1
    return
